Closed Bug 1456898 Opened 7 years ago Closed 7 years ago

[KDE] regression: autoscroll icon doesn't show up on the correct position

Categories

(Core :: Widget: Gtk, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla61
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox59 --- unaffected
firefox60 --- unaffected
firefox61 --- fixed

People

(Reporter: jan, Assigned: stransky)

References

Details

(Keywords: nightly-community, regression)

Attachments

(2 files)

Attached video 2018-04-25_17-54-08.mp4
Debian Testing, KDE, Xorg, Radeon RX480 Tested and affected Gtk3 themes: Default, Breeze The autoscroll icon does no longer appear at the exact location of the mouse pointer. mozregression --good 2018-04-23 --bad 2018-04-25 --pref browser.tabs.drawInTitlebar:true general.autoScroll:true startup.homepage_welcome_url:'https://www.mozilla.org/de/' > 7:22.28 INFO: Last good revision: dfbc948fadaa5455d4a9b0edebd2c7b98f22fb69 > 7:22.28 INFO: First bad revision: de3a44bd989c495492b95556fec146fdf3a90e50 > 7:22.28 INFO: Pushlog: > https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=dfbc948fadaa5455d4a9b0edebd2c7b98f22fb69&tochange=de3a44bd989c495492b95556fec146fdf3a90e50 > de3a44bd989c Martin Stransky — Bug 1441665 - [Gtk] Update window offset explicitly when titlebar is disabled in CSD mode, r=jhorak
The context menu is also affected. And if I disable CSD and do not restart, the context menu still shows up at the wrong place, but some pixels higher. Fixed by disabling CSD and restarting Nightly.
Which gtk3 version do you run? The KDE is definitely a tricky environment as it uses solid-css (AFAIK) but also reports active compositing capabilities (see Bug 1452520 for details). I'd say this is a KDE theme bug. Recently we don't support the CSD decoration correctly at KDE as it give us incorrect theme info - that needs to be worked out.
Assignee: nobody → stransky
See Also: → 1452520
Summary: regression: autoscroll icon doesn't show up on the correct position → [KDE] regression: autoscroll icon doesn't show up on the correct position
> Which gtk3 version do you run? Is 3.22.29-3 the right number? (https://packages.debian.org/en/buster/libgtk-3-0)
> I'd say this is a KDE theme bug. Yes. I just switched to Gnome on Xorg and the Breeze theme is fine in all manners there. (correct context menu and autoscroll icon position with and without restarting, sharp corners, resizable window)
(In reply to Jan Andre Ikenmeyer [:darkspirit] from comment #4) > > I'd say this is a KDE theme bug. > Yes. I just switched to Gnome on Xorg and the Breeze theme is fine in all > manners there. (correct context menu and autoscroll icon position with and > without restarting, sharp corners, resizable window) Yes. KDE is on my TODO list, if the CSD works here it's a pure luck.
Comment on attachment 8971189 [details] Bug 1456898 - Implement and use solid-csd decoration style to get window offset when solid-csd is used by mShell toplevel window, https://reviewboard.mozilla.org/r/239986/#review245726 ::: commit-message-8d85e:4 (Diff revision 1) > +Bug 1456898 - Implement and use solid-csd decoration style to get window offset when solid-csd is used by mShell toplevel window, r?jhorak > + > +Implement and use solid-csd decoration style to get window offset when solid-csd is used by mShell toplevel window. > +Also does not apply margin (resize handler sizes) on popup window as well as Gtk+ at get_shadow_width(). s/Gtk+ at get_shadow_width()/Gtk+ do in get_shadow_width()/
Attachment #8971189 - Flags: review?(jhorak) → review+
> https://reviewboard.mozilla.org/r/239986/diff/1-2/ https://treeherder.mozilla.org/#/jobs?repo=try&revision=eab3eb2036779532bded63193bf5a96f20be7993 mozregression --repo try --launch eab3eb2036779532bded63193bf5a96f20be7993 --pref browser.tabs.drawInTitlebar:true general.autoScroll:true startup.homepage_welcome_url:'https://www.mozilla.org/de/' Autoscroll icon and context menu show up at the correct position. Thanks! If I disable CSD I still see a KDE version of bug 1441665 which is not nice, but not a regression.
Pushed by stransky@redhat.com: https://hg.mozilla.org/integration/autoland/rev/86b1e651aa09 Implement and use solid-csd decoration style to get window offset when solid-csd is used by mShell toplevel window, r=jhorak
See Also: → 1457309
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla61
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: